force-app/main/default/objects/PHSS_User_Provisioning_Clone__c/PHSS_User_Provisioning_Clone__c.object-meta.xml
<CustomObject>
    <label>PHSS User Provisioning Clone</label>
    <nameField>
        <displayFormat>PHSS-UP-{000000}</displayFormat>
        <label>PHSS User Provisioning Clone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHSS User Provisioning Clones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>