force-app/main/default/objects/PHSS_User_Provisioning_Clone__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>