force-app/main/default/objects/PHSS_User_Provisioning_Clone__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <label>First name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>