force-app/main/default/objects/PHSS_User_Provisioning_Clone__c/fields/Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>Good_Standing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Good Standing</label>
    <type>Checkbox</type>
</CustomField>